--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,47 @@
-.App {
-  text-align: center;
+.test {
+  margin-left: 20px;
+  font-size: 15px;
+  animation: slideIn 750ms;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    margin-bottom: -15%;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    opacity: 1;
+    margin-bottom: 4%;
   }
+}
+
+.container {
+  position: relative;
+  left: 100px;
+}
+
+.box {
+  height: 40px;
+  width: 40px;
+  background-color: rgb(255, 255, 255);
+  transition-property: width, box-shadow;
+  transition-duration: 750ms;
+  transition-timing-function: ease-out;
+  /* transition-delay: 200ms; */
+  position: absolute;
+  top: 100px;
+  left: 0;
+  cursor: pointer;
+}
+
+.box:hover {
+  width: 200px;
+  /* height: 40px; */
+  box-shadow: 1px 1px 2px #aaa;
+}
+
+.status {
+  font-size: 15px;
+  animation: slideIn 1s;
+  /* transition-property: ; */
 }
