--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
+.offline-box {
+  --HEIGHT: 30px;
+  --WIDTH: 30px;
+
+  /* height: var(--HEIGHT);
+  width: var(--WIDTH); */
+  height: 30px;
+  width: 30px;
+  position: fixed;
+  bottom: 10px;
+  left: 20px;
+  will-change: box-shadow, width;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 2;
+  padding: 3px 5px;
+  background-color: #bbb;
+}
+
 .test {
-  margin-left: 20px;
-  font-size: 15px;
+  margin-left: 10px;
+  font-size: 13px;
   animation: slideIn 750ms;
 }
 
@@ -13,35 +33,4 @@
     opacity: 1;
     margin-bottom: 4%;
   }
-}
-
-.container {
-  position: relative;
-  left: 100px;
-}
-
-.box {
-  height: 40px;
-  width: 40px;
-  background-color: rgb(255, 255, 255);
-  transition-property: width, box-shadow;
-  transition-duration: 750ms;
-  transition-timing-function: ease-out;
-  /* transition-delay: 200ms; */
-  position: absolute;
-  top: 100px;
-  left: 0;
-  cursor: pointer;
-}
-
-.box:hover {
-  width: 200px;
-  /* height: 40px; */
-  box-shadow: 1px 1px 2px #aaa;
-}
-
-.status {
-  font-size: 15px;
-  animation: slideIn 1s;
-  /* transition-property: ; */
 }
